--- a/projects/netjournal.html
+++ b/projects/netjournal.html
@@ -8,8 +8,8 @@
   <body>
     <header class="">
       <span style="font-size: 18pt"><b>mollik.dev</b></span>
-      <a href="index.html" class="header-item">Главная</a>
-      <a href="projects.html" class="header-item-selected">Проекты</a>
+      <a href="/index.html" class="header-item">Главная</a>
+      <a href="/projects.html" class="header-item-selected">Проекты</a>
       <a href="" class="header-item">Документация</a>
       <a href="" class="header-item">Исходники</a>
       <a href="" class="header-item">Ссылки</a>
