--- a/index.html
+++ b/index.html
@@ -17,11 +17,10 @@
     </header>
     <br>
     <div class="container">
+      <h1>Новости</h1>
       <div class="news-container">
-          <span>some paragraph <a href="#" style="float: right" class="">Перейти...</a></span>
+          <span>Выпущена первая версия электронного журнала <a href="projects/netjournal.html" style="float: right" class="">перейти...</a></span>
       </div>
-      <button type="button" class="btn btn-gradient-green" name="button">Скачать проект</button>
-      <a href="#" class="btn btn-gradient-green">Поддержать нас</a>
     </div>
   </body>
 </html>
