--- a/links.html
+++ b/links.html
@@ -8,11 +8,10 @@
   <body>
     <header class="">
       <span style="font-size: 18pt"><b>mollik.dev</b></span>
-      <a href="/" class="header-item">Главная</a>
-      <a href="/" class="header-item">Проекты</a>
-      <a href="/" class="header-item">Документация</a>
-      <a href="/" class="header-item">Исходники</a>
-      <a href="/" class="header-item">Ссылки</a>
+      <a href="index.html" class="header-item">Главная</a>
+      <a href="projects.html" class="header-item">Проекты</a>
+      <a href="docs.html" class="header-item">Документация</a>
+      <a href="links.html" class="header-item">Ссылки</a>
       <hr>
     </header>
     <br>
