--- a/links.html
+++ b/links.html
@@ -11,7 +11,7 @@
       <a href="index.html" class="header-item">Главная</a>
       <a href="projects.html" class="header-item">Проекты</a>
       <a href="docs.html" class="header-item">Документация</a>
-      <a href="links.html" class="header-item">Ссылки</a>
+      <a href="links.html" class="header-item-selected">Ссылки</a>
       <hr>
     </header>
     <br>
