--- a/docs.html
+++ b/docs.html
@@ -16,7 +16,7 @@
     </header>
     <br>
     <div class="container">
-      <h1>Ссылки</h1>
+      <h1>Документация</h1>
       Тут пока-что ничего нет...
     </div>
   </body>
