--- a/links.html
+++ b/links.html
@@ -16,11 +16,10 @@
     </header>
     <br>
     <div class="container">
-      <div class="news-container">
-          <span>some paragraph <a href="#" style="float: right" class="">Перейти...</a></span>
-      </div>
-      <button type="button" class="btn btn-gradient-green" name="button">Скачать проект</button>
-      <a href="#" class="btn btn-gradient-green">Поддержать нас</a>
+      <h1>Ссылки</h1>
+      <ul>
+        <li>ВКонтакте: <a stylr="text-decorations: none;" href="https://vk.com/id254911891" target="_blank">ссылка</a></li>
+      </ul>
     </div>
   </body>
 </html>
