--- a/projects.html
+++ b/projects.html
@@ -16,6 +16,7 @@
     </header>
     <br>
     <div class="container">
+      <h1>Проекты</h1>
       <div class="news-container">
           <span>Электронный журнал с продвинутыми функциями <a href="projects/netjournal.html" style="float: right" class="">Перейти...</a></span>
       </div>
