--- a/projects/netjournal.html
+++ b/projects/netjournal.html
@@ -3,7 +3,7 @@
   <head>
     <meta charset="utf-8">
     <title>Сайт mollik.dev</title>
-    <link href="style.css" rel="stylesheet">
+    <link href="/style.css" rel="stylesheet">
   </head>
   <body>
     <header class="">
