--- a/index.html
+++ b/index.html
@@ -6,13 +6,12 @@
     <link href="style.css" rel="stylesheet">
   </head>
   <body>
-    <header class="">
+    <header class="header border-bottom shadow-sm">
       <span style="font-size: 18pt"><b>mollik.dev</b></span>
       <a href="index.html" class="header-item-selected">Главная</a>
       <a href="projects.html" class="header-item">Проекты</a>
       <a href="docs.html" class="header-item">Документация</a>
       <a href="links.html" class="header-item">Ссылки</a>
-      <hr>
     </header>
     <br>
     <div class="container">
