--- a/projects.html
+++ b/projects.html
@@ -6,14 +6,13 @@
     <link href="style.css" rel="stylesheet">
   </head>
   <body>
-    <header class="">
+    <div class="header border-bottom shadow-sm">
       <span style="font-size: 18pt"><b>mollik.dev</b></span>
       <a href="index.html" class="header-item">Главная</a>
       <a href="projects.html" class="header-item-selected">Проекты</a>
       <a href="docs.html" class="header-item">Документация</a>
       <a href="links.html" class="header-item">Ссылки</a>
-      <hr>
-    </header>
+    </div>
     <br>
     <div class="container">
       <h1>Проекты</h1>
