--- a/projects/netjournal.html
+++ b/projects/netjournal.html
@@ -15,11 +15,9 @@
     </div>
     <br>
     <div class="container">
-      <div class="news-container">
-          <h2>Электронный журнал с продвинутыми функциями</h2>
-          детали отсутствуют...
-      </div>
-      <a href="https://networkdiary.pythonanywhere.com" class="btn btn-gradient-green">Перейти к сайту...</a>
+      <h2>Электронный журнал с продвинутыми функциями</h2>
+      пока-что ничего нет =(
+    <a href="https://networkdiary.pythonanywhere.com" class="btn btn-gradient-green">Перейти к сайту...</a>
     </div>
   </body>
 </html>
