--- a/projects/netjournal.html
+++ b/projects/netjournal.html
@@ -19,7 +19,8 @@
       пока-что ничего нет =(
       <hr>
       <br>
-      <a href="https://networkdiary.pythonanywhere.com" class="btn btn-gradient-green">Перейти к сайту...</a>
+      <a href="https://networkdiary.pythonanywhere.com" class="btn btn-gradient-green">Перейти к сайту</a>
+      <a href="netjournal_theory.docx" class="btn btn-gradient-green">Скачать теоритеческую версию продукта</a>
     </div>
   </body>
 </html>
