--- a/projects/netjournal.html
+++ b/projects/netjournal.html
@@ -16,7 +16,9 @@
     <br>
     <div class="container">
       <h2>Электронный журнал с продвинутыми функциями</h2>
-      пока-что ничего нет =(
+      <p>
+        Электронный сервис для образовательных учреждений. Позволяет дистанционно как выдавать домашние задания, выставлять отметки со стороны учителя, так и просматривать полученные данные со стороны ученика. Имеет удобный и понятный интерфейс, в котором разберётся каждый. Использование сервиса абсолютно бесплатно, при условии, что пользователь согласен на обработку всех введённых им данных.
+      </p>
       <hr>
       <br>
       <a href="https://networkdiary.pythonanywhere.com" class="btn btn-gradient-green">Перейти к сайту</a>
