--- a/projects/netjournal.html
+++ b/projects/netjournal.html
@@ -19,6 +19,24 @@
       <p>
         Электронный сервис для образовательных учреждений. Позволяет дистанционно как выдавать домашние задания, выставлять отметки со стороны учителя, так и просматривать полученные данные со стороны ученика. Имеет удобный и понятный интерфейс, в котором разберётся каждый. Использование сервиса абсолютно бесплатно, при условии, что пользователь согласен на обработку всех введённых им данных.
       </p>
+      <table>
+        <tr>
+          <td>Использование</td>
+          <td>Свободное</td>
+        </tr>
+        <tr>
+          <td>Год выпуска</td>
+          <td>2020</td>
+        </tr>
+        <tr>
+          <td>Язык</td>
+          <td>Русский</td>
+        </tr>
+        <tr>
+          <td>Написан на</td>
+          <td>Python 3.8 & django</td>
+        </tr>
+      </table>
       <hr>
       <br>
       <a href="https://networkdiary.pythonanywhere.com" class="btn btn-gradient-green">Перейти к сайту</a>
