--- a/projects/netjournal.html
+++ b/projects/netjournal.html
@@ -19,7 +19,7 @@
       <p>
         Электронный сервис для образовательных учреждений. Позволяет дистанционно как выдавать домашние задания, выставлять отметки со стороны учителя, так и просматривать полученные данные со стороны ученика. Имеет удобный и понятный интерфейс, в котором разберётся каждый. Использование сервиса абсолютно бесплатно, при условии, что пользователь согласен на обработку всех введённых им данных.
       </p>
-      <table>
+      <table border="1">
         <tr>
           <td>Использование</td>
           <td>Свободное</td>
