--- a/projects/netjournal.html
+++ b/projects/netjournal.html
@@ -40,7 +40,7 @@
       <hr>
       <br>
       <a href="https://networkdiary.pythonanywhere.com" class="btn btn-gradient-green">Перейти к сайту</a>
-      <a href="netjournal_theory.docx" class="btn btn-gradient-green">Скачать теоритеческую версию продукта</a>
+      <a href="netjournal_theory.docx" class="btn btn-gradient-green ml">Скачать теоритеческую версию продукта</a>
     </div>
   </body>
 </html>
