--- a/projects/netjournal.html
+++ b/projects/netjournal.html
@@ -19,7 +19,7 @@
       <p>
         Электронный сервис для образовательных учреждений. Позволяет дистанционно как выдавать домашние задания, выставлять отметки со стороны учителя, так и просматривать полученные данные со стороны ученика. Имеет удобный и понятный интерфейс, в котором разберётся каждый. Использование сервиса абсолютно бесплатно, при условии, что пользователь согласен на обработку всех введённых им данных.
       </p>
-      <table border="1" style="border: 1px solid #000; border-collapse: collapse;">
+      <table class="jewel">
         <tr>
           <td>Использование</td>
           <td>Свободное</td>
@@ -40,7 +40,7 @@
       <hr>
       <br>
       <a href="https://networkdiary.pythonanywhere.com" class="btn btn-gradient-green">Перейти к сайту</a>
-      <a href="netjournal_theory.docx" class="btn btn-gradient-green ml">Скачать теоритеческую версию продукта</a>
+      <a href="netjournal_theory.docx" class="btn btn-gradient-green ml">Теоритеческая версия</a>
     </div>
   </body>
 </html>
