--- a/projects/netjournal.html
+++ b/projects/netjournal.html
@@ -38,9 +38,8 @@
         </tr>
       </table>
       <hr>
-      <br>
       <a href="https://networkdiary.pythonanywhere.com" class="btn btn-gradient-green">Перейти к сайту</a>
-      <a href="netjournal_theory.docx" class="btn btn-gradient-green ml">Теоритеческая версия</a>
+      <a href="netjournal_theory.docx" class="btn btn-gradient-green">Теоритеческая версия</a>
     </div>
   </body>
 </html>
